<?xml version="1.0"?>
<package>
    <name>pybullet_ros</name>
    <version>2.0.0</version>
    <description>
        ROS wrapper for pybullet simulator
    </description>

    <license>MIT</license>

    <author email="oscar.lima@dfki.de">Oscar Lima</author>
    <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>actionlib_msgs</build_depend>   
    <build_depend>move_base_msgs</build_depend>



    <run_depend>std_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>joint_state_publisher_gui</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>move_base_msgs</run_depend>


</package>
